--- a/circleci/config.yml
+++ b/circleci/config.yml
@@ -39,4 +39,7 @@ jobs:
           key: v1-dependencies-{{ checksum "project.clj" }}
 
       # run tests!
-      - run: lein test
+      - run: lein cljsbuild test
+
+      # build
+      - run: lein cljsbuild once min
